package com.example;

/**
 * Represents a JSON operation with two operands.
 * Fields are populated by Gson via reflection.
 */
class Operation {
  String operation;
  int operandA;
  int operandB;
}
